try to fix non visible gravatar -> picture in bio$

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -69,7 +69,7 @@
 }
 
 #fun {
-    background-color: #6c757d;
+    background-color: #7a7a7a;
 }
 
 .fun {
